--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -32,6 +32,6 @@ tasks:
       - find . -name 'go.mod' -print0 | xargs -0 -I {} /bin/bash -c 'go work use `dirname $1`' '_' '{}' \+
   releaseall:
     cmds:
-      - find . -name 'go.mod' -print0 | xargs -0 -I {} /bin/bash -c 'dir=$(dirname $1); pkg=${dir:2}; hub release create -m "${dir}/{{.GIT_TAG}}" "${dir}/{{.GIT_TAG}}"' '_' '{}' \+
+      - find . -name 'go.mod' -print0 | xargs -0 -I {} /bin/bash -c 'dir=$(dirname $1); pkg=${dir:2}; hub release create -m "${pkg}/{{.GIT_TAG}}" "${pkg}/{{.GIT_TAG}}"' '_' '{}' \+
     preconditions:
       - test "{{.GIT_TAG}}" = "{{.VERSION}}"
