--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 vars:
-  GIT_TAG: 
+  GIT_TAG:
     sh: git tag --points-at HEAD
   GIT_COMMIT:
     sh: git rev-parse --short HEAD
@@ -18,14 +18,13 @@ tasks:
     cmds:
       - trunk check --ci
   tidy:
+    desc: Run "go mod tidy -go=1.8" in all packages
     cmds:
       - find . -name 'go.mod' -print0 | xargs -0 -I {} /bin/bash -c 'pushd `dirname $1`; go mod tidy -go=1.18; popd' '_' '{}' \+
   update:
+    desc: Run "go get -u ./..." in all packages
     cmds:
       - find . -name 'go.mod' -print0 | xargs -0 -I {} /bin/bash -c 'pushd `dirname $1`; go get -u ./...; popd' '_' '{}' \+
-  gosums:
-    cmds:
-      - find . -name 'go.mod' -print0 | xargs -0 -I {} /bin/bash -c 'pushd `dirname $1`; git add go.mod go.sum; popd' '_' '{}' \+
   test:
     cmds:
       - find . -name 'go.mod' -print0 | xargs -0 -I {} /bin/bash -c 'pushd `dirname $1`; go test ./...; popd' '_' '{}' \+
@@ -34,11 +33,11 @@ tasks:
       - go work init . || exit 0
       - find . -name 'go.mod' -print0 | xargs -0 -I {} /bin/bash -c 'go work use `dirname $1`' '_' '{}' \+
   release:
-    desc: "Release plugins that have changed, usage example: task release -- v5.0.13 v5.0.14"
+    desc: "Release plugins that have changed it requires to be in a git repo with a clean tag, usage example: task release -- v5.0.13 v5.0.14"
     cmds:
       - |-
-        for pkg in $(./scripts/find_changed.sh {{.CLI_ARGS}}); 
-          do hub release create -m "${pkg}/{{.GIT_TAG}}" "${pkg}/{{.GIT_TAG}}"; 
+        for pkg in $(./scripts/find_changed.sh {{.CLI_ARGS}}); do 
+          hub release create -m "${pkg}/{{.GIT_TAG}}" "${pkg}/{{.GIT_TAG}}"; 
         done
     preconditions:
       - test -n "{{.CLI_ARGS}}"
